<resources>
    <string name="app_name">TacTicToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Toe Tac Tic?</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="under_construction_sign">--Under Construction--</string>
    <string name="play">Play</string>
    <string name="local_game">Local Game</string>
    <string name="local_game_description">Play with friends locally on the same device.</string>
    <string name="choose_game_mode">Choose a game mode</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="x_value">X</string>
    <string name="name_hint">What is your name?</string>
    <string name="next">Next</string>
    <string name="o_value">O</string>
    <string name="start_game">Start game</string>
    <string name="current_player_label">Players turn</string>
    <string name="empty_value">" "</string>
    <string name="tie_statement">It\'s a Tie!</string>
    <string name="winner_placeholder">insert winner here</string>
    <string name="play_again">Play Again?</string>
    <string name="results_label">Results</string>
    <string name="against_jeff">Play against Jeff</string>
    <string name="against_jeff_description">\"Who\'s Jeff?\" you might ask. Well only the greatest Tic Tac Toe player in the world. He is one of the world\'s top competitive Tic Tac Toe players and he is sure to <strike>beat your a..</strike> beat you up or at least tie the game. Don\'t believe me? See for yourself</string>
    <string name="working_on_it_label">working on it...</string>
    <string name="choose_a_symbol">Choose a symbol</string>
    <string name="jeff">just_jeff</string>
</resources>