<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameModes.AgainstJeffGame.ChooseSymbolFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/choose_a_symbol_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/choose_a_symbol"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <Button
        android:id="@+id/choice_x_button"
        style="@style/gridButton_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_value"
        android:textColor="@color/design_default_color_on_primary"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/choice_o_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_a_symbol_text"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/choice_o_button"
        style="@style/gridButton_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_value"
        android:textColor="@color/design_default_color_on_primary"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/choice_x_button"
        app:layout_constraintTop_toBottomOf="@+id/choose_a_symbol_text"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>